feat: Add features, extensions, and postCreate script

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,5 @@
       ]
     }
   }
-  "postCreateCommand": {"bash .devcontainer/postCreate.sh"}
+  "postCreateCommand": "bash .devcontainer/postCreate.sh"
 }
